--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
