--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
